// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests disabled view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <PopperComponent
    className={undefined}
    hidePopper={true}
    popperComponent={null}
    popperContainer={undefined}
    popperModifiers={
        Object {
            "preventOverflow": Object {
              "boundariesElement": "viewport",
              "enabled": true,
              "escapeWithReference": true,
            },
          }
    }
    popperPlacement="bottom-start"
    targetComponent={
        <div
            className="react-datepicker__input-container"
        >
            <TextField
                autoComplete={undefined}
                autoFocus={undefined}
                className=""
                disabled={true}
                id={undefined}
                label={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onClearButtonClick={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                showClearButton={undefined}
                tabIndex={undefined}
                title={undefined}
                type="text"
                value="09/15/2017"
            />
        </div>
    }
/>,
  "nodes": Array [
    <PopperComponent
      className={undefined}
      hidePopper={true}
      popperComponent={null}
      popperContainer={undefined}
      popperModifiers={
            Object {
                  "preventOverflow": Object {
                    "boundariesElement": "viewport",
                    "enabled": true,
                    "escapeWithReference": true,
                  },
                }
      }
      popperPlacement="bottom-start"
      targetComponent={
            <div
                  className="react-datepicker__input-container"
            >
                  <TextField
                        autoComplete={undefined}
                        autoFocus={undefined}
                        className=""
                        disabled={true}
                        id={undefined}
                        label={undefined}
                        name={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClearButtonClick={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder={undefined}
                        readOnly={undefined}
                        required={undefined}
                        showClearButton={undefined}
                        tabIndex={undefined}
                        title={undefined}
                        type="text"
                        value="09/15/2017"
                  />
            </div>
      }
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={true}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      preventOpenOnFocus={false}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "calcInitialState": [Function],
      "cancelFocusInput": [Function],
      "clear": [Function],
      "clearPreventFocusTimeout": [Function],
      "context": Object {},
      "deferFocusInput": [Function],
      "getPreSelection": [Function],
      "handleBlur": [Function],
      "handleCalendarClickOutside": [Function],
      "handleChange": [Function],
      "handleDropdownFocus": [Function],
      "handleFocus": [Function],
      "handleSelect": [Function],
      "handleTimeChange": [Function],
      "onClearClick": [Function],
      "onInputClick": [Function],
      "onInputKeyDown": [Function],
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": true,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "fixedHeight": true,
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [Function],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": false,
      },
      "refs": Object {},
      "renderCalendar": [Function],
      "renderDateInput": [Function],
      "setFocus": [Function],
      "setOpen": [Function],
      "setPreSelection": [Function],
      "setSelected": [Function],
      "state": Object {
        "focused": false,
        "highlightDates": Map {},
        "open": false,
        "preSelection": "2017-09-15T13:30:00.000Z",
        "preventFocus": false,
      },
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <PopperComponent
      className={undefined}
      hidePopper={true}
      popperComponent={null}
      popperContainer={undefined}
      popperModifiers={
            Object {
                  "preventOverflow": Object {
                    "boundariesElement": "viewport",
                    "enabled": true,
                    "escapeWithReference": true,
                  },
                }
      }
      popperPlacement="bottom-start"
      targetComponent={
            <div
                  className="react-datepicker__input-container"
            >
                  <TextField
                        autoComplete={undefined}
                        autoFocus={undefined}
                        className=""
                        disabled={true}
                        id={undefined}
                        label={undefined}
                        name={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClearButtonClick={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder={undefined}
                        readOnly={undefined}
                        required={undefined}
                        showClearButton={undefined}
                        tabIndex={undefined}
                        title={undefined}
                        type="text"
                        value="09/15/2017"
                  />
            </div>
      }
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    allowSameDay={false}
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={true}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    preventOpenOnFocus={false}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showTimeSelect={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
}
`;

exports[`DatePicker Snapshot tests portal view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    <div
        className="react-datepicker__input-container"
    >
        <TextField
            autoComplete={undefined}
            autoFocus={undefined}
            className=""
            disabled={false}
            id={undefined}
            label={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClearButtonClick={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            showClearButton={undefined}
            tabIndex={undefined}
            title={undefined}
            type="text"
            value="09/15/2017"
        />
    </div>
</div>,
  "nodes": Array [
    <div>
      <div
            className="react-datepicker__input-container"
      >
            <TextField
                  autoComplete={undefined}
                  autoFocus={undefined}
                  className=""
                  disabled={false}
                  id={undefined}
                  label={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClearButtonClick={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  readOnly={undefined}
                  required={undefined}
                  showClearButton={undefined}
                  tabIndex={undefined}
                  title={undefined}
                  type="text"
                  value="09/15/2017"
            />
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      preventOpenOnFocus={false}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={true}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "calcInitialState": [Function],
      "cancelFocusInput": [Function],
      "clear": [Function],
      "clearPreventFocusTimeout": [Function],
      "context": Object {},
      "deferFocusInput": [Function],
      "getPreSelection": [Function],
      "handleBlur": [Function],
      "handleCalendarClickOutside": [Function],
      "handleChange": [Function],
      "handleDropdownFocus": [Function],
      "handleFocus": [Function],
      "handleSelect": [Function],
      "handleTimeChange": [Function],
      "onClearClick": [Function],
      "onInputClick": [Function],
      "onInputKeyDown": [Function],
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": false,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "fixedHeight": true,
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [Function],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": true,
      },
      "refs": Object {},
      "renderCalendar": [Function],
      "renderDateInput": [Function],
      "setFocus": [Function],
      "setOpen": [Function],
      "setPreSelection": [Function],
      "setSelected": [Function],
      "state": Object {
        "focused": false,
        "highlightDates": Map {},
        "open": false,
        "preSelection": "2017-09-15T13:30:00.000Z",
        "preventFocus": false,
      },
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <div>
      <div
            className="react-datepicker__input-container"
      >
            <TextField
                  autoComplete={undefined}
                  autoFocus={undefined}
                  className=""
                  disabled={false}
                  id={undefined}
                  label={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClearButtonClick={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  readOnly={undefined}
                  required={undefined}
                  showClearButton={undefined}
                  tabIndex={undefined}
                  title={undefined}
                  type="text"
                  value="09/15/2017"
            />
      </div>
</div>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    allowSameDay={false}
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    preventOpenOnFocus={false}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showTimeSelect={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={true}
/>,
}
`;

exports[`DatePicker Snapshot tests regular view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <PopperComponent
    className={undefined}
    hidePopper={true}
    popperComponent={null}
    popperContainer={undefined}
    popperModifiers={
        Object {
            "preventOverflow": Object {
              "boundariesElement": "viewport",
              "enabled": true,
              "escapeWithReference": true,
            },
          }
    }
    popperPlacement="bottom-start"
    targetComponent={
        <div
            className="react-datepicker__input-container"
        >
            <TextField
                autoComplete={undefined}
                autoFocus={undefined}
                className=""
                disabled={false}
                id={undefined}
                label={undefined}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onClearButtonClick={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder={undefined}
                readOnly={undefined}
                required={undefined}
                showClearButton={undefined}
                tabIndex={undefined}
                title={undefined}
                type="text"
                value="09/15/2017"
            />
        </div>
    }
/>,
  "nodes": Array [
    <PopperComponent
      className={undefined}
      hidePopper={true}
      popperComponent={null}
      popperContainer={undefined}
      popperModifiers={
            Object {
                  "preventOverflow": Object {
                    "boundariesElement": "viewport",
                    "enabled": true,
                    "escapeWithReference": true,
                  },
                }
      }
      popperPlacement="bottom-start"
      targetComponent={
            <div
                  className="react-datepicker__input-container"
            >
                  <TextField
                        autoComplete={undefined}
                        autoFocus={undefined}
                        className=""
                        disabled={false}
                        id={undefined}
                        label={undefined}
                        name={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClearButtonClick={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder={undefined}
                        readOnly={undefined}
                        required={undefined}
                        showClearButton={undefined}
                        tabIndex={undefined}
                        title={undefined}
                        type="text"
                        value="09/15/2017"
                  />
            </div>
      }
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      preventOpenOnFocus={false}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "calcInitialState": [Function],
      "cancelFocusInput": [Function],
      "clear": [Function],
      "clearPreventFocusTimeout": [Function],
      "context": Object {},
      "deferFocusInput": [Function],
      "getPreSelection": [Function],
      "handleBlur": [Function],
      "handleCalendarClickOutside": [Function],
      "handleChange": [Function],
      "handleDropdownFocus": [Function],
      "handleFocus": [Function],
      "handleSelect": [Function],
      "handleTimeChange": [Function],
      "onClearClick": [Function],
      "onInputClick": [Function],
      "onInputKeyDown": [Function],
      "props": Object {
        "allowSameDay": false,
        "dateFormat": "L",
        "dateFormatCalendar": "MMMM YYYY",
        "disabled": false,
        "disabledKeyboardNavigation": false,
        "dropdownMode": "scroll",
        "fixedHeight": true,
        "monthsShown": 1,
        "onBlur": [Function],
        "onChange": [Function],
        "onClickOutside": [Function],
        "onFocus": [Function],
        "onKeyDown": [Function],
        "onMonthChange": [Function],
        "onSelect": [Function],
        "onYearChange": [Function],
        "preventOpenOnFocus": false,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showTimeSelect": false,
        "timeCaption": "Time",
        "timeIntervals": 30,
        "withPortal": false,
      },
      "refs": Object {},
      "renderCalendar": [Function],
      "renderDateInput": [Function],
      "setFocus": [Function],
      "setOpen": [Function],
      "setPreSelection": [Function],
      "setSelected": [Function],
      "state": Object {
        "focused": false,
        "highlightDates": Map {},
        "open": false,
        "preSelection": "2017-09-15T13:30:00.000Z",
        "preventFocus": false,
      },
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <PopperComponent
      className={undefined}
      hidePopper={true}
      popperComponent={null}
      popperContainer={undefined}
      popperModifiers={
            Object {
                  "preventOverflow": Object {
                    "boundariesElement": "viewport",
                    "enabled": true,
                    "escapeWithReference": true,
                  },
                }
      }
      popperPlacement="bottom-start"
      targetComponent={
            <div
                  className="react-datepicker__input-container"
            >
                  <TextField
                        autoComplete={undefined}
                        autoFocus={undefined}
                        className=""
                        disabled={false}
                        id={undefined}
                        label={undefined}
                        name={undefined}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClearButtonClick={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder={undefined}
                        readOnly={undefined}
                        required={undefined}
                        showClearButton={undefined}
                        tabIndex={undefined}
                        title={undefined}
                        type="text"
                        value="09/15/2017"
                  />
            </div>
      }
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    allowSameDay={false}
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    preventOpenOnFocus={false}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showTimeSelect={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
}
`;
